<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>ch.vorburger.mariaDB4j</groupId>
    <artifactId>mariaDB4j-pom-lite</artifactId>
<!--Do NOT depend on a SNAPSHOT here! -->
<!--Note that this parent version and the version below are, intentionally, completely unrelated. -->
    <version>2.3.0</version>
    <relativePath>mariaDB4j-pom-lite/pom.xml</relativePath>
  </parent>

  <artifactId>mariaDB4j-pom</artifactId>
  <version>3.3.1-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>MariaDB4j POM</name>

  <scm>
<!--The <connection> and <url> are specified in the <parent> but the -->
<!--<developerConnection> and the <tag> must be here, for the maven-release-plugin -->
<!--to work correctly, if the <parent> is not a SNAPSHOT; -->
<!--see https://github.com/MariaDB4j/MariaDB4j/issues/43. -->
    <developerConnection>scm:git:git@github.com:vorburger/MariaDB4j.git</developerConnection>
    <tag>mariaDB4j-3.0.1</tag>
  </scm>

  <modules>
<!--We do NOT include <module> for the mariaDB4j-pom-lite, nor the DBs/mariaDB4j-db-* here! -->
<!--This is because those are NOT versioned the same way as this artifact and the ones below. -->
<!--Therefore, the mvn release:* and mvn deploy is done separately for this (below) -->
<!--and the mariaDB4j-pom-lite and DBs/mariaDB4j-db-*. -->
    <module>mariaDB4j-core</module>
    <module>mariaDB4j-junit</module>
    <module>mariaDB4j</module>
    <module>mariaDB4j-springboot</module>
    <module>mariaDB4j-app</module>
    <module>mariaDB4j-maven-plugin</module>
  </modules>

  <properties>
<!--Needed for Mockito agent loading. -->
    <argLine/>
<!--https://maven.apache.org/guides/mini/guide-reproducible-builds.html -->
    <project.build.outputTimestamp>2025-10-03T21:17:04Z</project.build.outputTimestamp>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <springboot.version>3.5.6</springboot.version>
    <jakarta.annotation-api.version>3.0.0</jakarta.annotation-api.version>
    <errorprone.version>2.42.0</errorprone.version>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.14.1</version>
        <configuration>
          <release>17</release>
          <encoding>UTF-8</encoding>
          <compilerArgs>
            <arg>-Werror</arg>
            <arg>-Xlint:all</arg>
            <arg>-XDcompilePolicy=simple</arg>
            <arg>--should-stop=ifError=FLOW</arg>
<!--        Note bene: -XepAllDisabledChecksAsWarnings is not worth it! -->
            <arg>-Xplugin:ErrorProne -XepDisableWarningsInGeneratedCode
              -Xep:IdentifierName:OFF -Xep:Java8ApiChecker:OFF
              -XepExcludedPaths:.*/target/generated-sources/.*</arg>
          </compilerArgs>
          <annotationProcessorPaths>
            <path>
              <groupId>com.google.errorprone</groupId>
              <artifactId>error_prone_core</artifactId>
              <version>${errorprone.version}</version>
            </path>
<!--        Other annotation processors go here. -->
<!--        If 'annotationProcessorPaths' is set, processors will no longer be discovered on the regular -classpath; -->
<!--        see also 'Using Error Prone together with other annotation processors' below. -->
          </annotationProcessorPaths>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.4</version>
      </plugin>

      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.12.0</version>
        <configuration>
          <quiet>true</quiet>
          <show>public</show>
<!--      TODO <failOnWarnings>true</failOnWarnings> -->
        </configuration>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>3.1.1</version>
        <configuration>
          <useReleaseProfile>false</useReleaseProfile>
          <releaseProfiles>release</releaseProfiles>
          <autoVersionSubmodules>true</autoVersionSubmodules>
<!--      https://central.sonatype.org/publish/requirements/gpg/ -->
<!--      https://issues.apache.org/jira/projects/MGPG/issues/MGPG-9 -->
<!--      https://issues.apache.org/jira/projects/MRELEASE/issues/MRELEASE-263 -->
          <mavenExecutorId>forked-path</mavenExecutorId>
<!--      Following is required because artifactId is (now) mariaDB4j-pom, but we want mariaDB4j -->
          <tagNameFormat>mariaDB4j-@{project.version}</tagNameFormat>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <version>2.7.0</version>
        <configuration>
          <licenseName>apache_v2</licenseName>
          <addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
          <failOnMissingHeader>true</failOnMissingHeader>
          <failOnNotUptodateHeader>true</failOnNotUptodateHeader>
          <roots>
            <root>src/main/java</root>
            <root>src/test/java</root>
          </roots>
        </configuration>
        <executions>
          <execution>
            <phase>validate</phase>
            <goals>
              <goal>check-file-header</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>com.spotify.fmt</groupId>
        <artifactId>fmt-maven-plugin</artifactId>
        <version>2.29</version>
        <executions>
          <execution>
            <?m2e execute onIncremental?>
            <goals>
              <goal>format</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <style>aosp</style>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${springboot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <scope>test</scope>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>6.0.0</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-simple</artifactId>
        <version>2.0.17</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>2.20.0</version>
      </dependency>
      <dependency>
        <groupId>commons-dbutils</groupId>
        <artifactId>commons-dbutils</artifactId>
        <version>1.8.1</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>jakarta.annotation</groupId>
        <artifactId>jakarta.annotation-api</artifactId>
        <version>${jakarta.annotation-api.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
</project>
